2007-08-19 21:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog
	* GNUmakefile
	* Palettes/5Controllers/ControllersPalette.m
	* Palettes/5Controllers/ControllersPalette.tiff
	* Palettes/5Controllers/GNUmakefile
	* Palettes/5Controllers/GNUmakefile.preamble
	* Palettes/5Controllers/palette.table
	* Palettes/GNUmakefile
	* Resources/Defaults.plist: Initial changes for controllers palette.

2007-08-19 21:21-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* Palettes/GNUmakefile
	* Resources/Defaults.plist

2007-07-27 13:30-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Remove commented code.
	* Palettes/0Menus/GormNSMenu.m: Added private category to prevent
	compilation warning.

2007-07-26 10:25-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenuView.m: Remove commented out code.

2007-07-26 10:06-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Remove default setting
	* Palettes/0Menus/GNUmakefile: Add GormNSMenuView.m
	* Palettes/0Menus/GormNSMenu.m: Override methods to prevent changing
	style to Mac style for menu being edited.
	* Palettes/0Menus/GormNSMenuView.[mh]: New class overrides methods
	to prevent switching style to Mac style for menu being edited.
	* Palettes/0Menus/palette.table: Added substitution rule for 
	NSMenuView.

2007-06-27 19:25-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: Correct bug#20274. Changed call
	displayIfNeededInRectIgnoringOpacity: to displayRectIgnoringOpacity:

2007-04-29 17:08-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormViewSizeInspector.gorm: Correct bug#19640
	* GormInfo.plist: update

2007-03-17  Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 1.2.0

2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Palettes/3Containers/GormTabViewAttributesInspector.m (-ok:):
	Handle changed NSTabViewType enumerator values correctly.
	