@@ -1,3 +1,8 @@
+2007-08-24 00:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormPrivate.m: Changed initWithCoder: to handle
+	older .gorm (version 0) files correctly.
+
 2007-08-19 21:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* ChangeLog
